<resources>
    <string name="app_name">Pelajar Memantau</string>
    <string name="title_home">Beranda</string>
    <string name="title_report">Lapor</string>
    <string name="title_profile">Profil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tc_ipm">Pelajar Memantau</string>
    <string name="welcome">Selamat Datang</string>
    <string name="keep_the_city_together">Jaga kota bersama</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Lupa password?</string>
    <string name="send">Kirim</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Nama</string>
    <string name="exit">Keluar</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="remove">Hapus</string>
    <string name="support">Dukung</string>
    <string name="change_photo">Ganti foto</string>
    <string name="address">Alamat</string>
    <string name="edit">Sunting</string>
    <string name="profile">Profil</string>
    <string name="location">Lokasi</string>

    <string-array name="violation_kind_list">
        <item>Merokok</item>
        <item>Menjual rokok</item>
        <item>Mempromosikan rokok</item>
        <item>Iklan rokok dan kegiatan yang disponsori rokok</item>
    </string-array>

    <string-array name="violation_place_list">
        <item>Tempat kerja</item>
        <item>Tempat ibadah</item>
        <item>Angkutan umum</item>
        <item>Tempat bermain anak</item>
        <item>Tempat belajar mengajar</item>
        <item>Fasilitas pelayanan kesehatan</item>
        <item>Tempat umum (mall, bandara, stasiun, dll)</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
</resources>
