<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/rootView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">
    <ImageView
            android:id="@+id/bookIconImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:contentDescription="@null"
            android:src="@drawable/ic_logo" />
    <TextView
            android:id="@+id/bookITextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bookIconImageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/tc_ipm"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
    <ProgressBar
            android:id="@+id/loadingProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-4dp"
            android:foregroundGravity="bottom"
            android:indeterminate="true"
            android:padding="0dp"
            android:theme="@style/ProgressBarStyle" />
    <RelativeLayout
            android:id="@+id/afterAnimationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="130dp"
            android:orientation="vertical"
            android:visibility="gone">
        <TextView
                android:id="@+id/WelcomeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
        <TextView
                android:id="@+id/readItTogetherTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/WelcomeTextView"
                android:layout_marginTop="10dp"
                android:text="@string/keep_the_city_together"
                android:textColor="@color/white"
                android:textSize="15sp" />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/loginButton"
                android:layout_below="@+id/readItTogetherTextView"
                android:gravity="center"
                android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    app:hintTextColor="@color/white"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="5dp">
                <TextView
                        android:id="@+id/tv_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                <TextView
                        android:id="@+id/tv_forget_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:text="@string/forget_password"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />
            </FrameLayout>
        </LinearLayout>
        <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:background="@color/white"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
    </RelativeLayout>

    <include
            android:visibility="gone"
            android:id="@+id/progressbar"
            layout="@layout/progress_bar"/>

</RelativeLayout>