<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".RegisterActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/bookIconImageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:contentDescription="@null"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="16dp"
                android:src="@drawable/ic_logo_white" />

        <RelativeLayout
                android:id="@+id/afterAnimationView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/WelcomeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            <TextView
                    android:id="@+id/readItTogetherTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/WelcomeTextView"
                    android:layout_marginTop="10dp"
                    android:text="@string/keep_the_city_together"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/loginButton"
                    android:layout_below="@+id/readItTogetherTextView"
                    android:gravity="center"
                    android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        app:hintTextColor="@color/white"
                        android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:maxLines="1"
                            android:inputType="text"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        app:hintTextColor="@color/white"
                        android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:maxLines="1"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextColor="@color/white"
                        app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:hint="@string/password"
                            android:maxLines="1"
                            android:inputType="textPassword"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>
                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:padding="5dp">
                    <TextView
                            android:id="@+id/tv_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                </FrameLayout>
            </LinearLayout>
            <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_above="@+id/skipTextView"
                    android:layout_marginBottom="5dp"
                    android:background="@color/white"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            <TextView
                    android:id="@+id/skipTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:padding="12dp"
                    android:visibility="invisible"
                    android:textColor="@color/colorTextView"
                    android:textSize="15sp" />
        </RelativeLayout>

    </LinearLayout>

    <include
            android:visibility="gone"
            android:id="@+id/progressbar"
        layout="@layout/progress_bar"/>

</FrameLayout>