<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ForgotPasswordActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/bookIconImageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:contentDescription="@null"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="16dp"
                android:src="@drawable/ic_logo_white" />

        <RelativeLayout
                android:id="@+id/afterAnimationView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/WelcomeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            <TextView
                    android:id="@+id/readItTogetherTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/WelcomeTextView"
                    android:layout_marginTop="10dp"
                    android:text="@string/keep_the_city_together"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/btn_signup"
                    android:layout_below="@+id/readItTogetherTextView"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_marginTop="8dp"
                        android:text="* Panduan untuk atur ulang password akan dikirim ke email kamu"/>

            </LinearLayout>
            <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="16dp"
                    android:background="@color/white"
                    android:text="@string/send"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
        </RelativeLayout>

    </LinearLayout>

    <include
            android:visibility="gone"
            android:id="@+id/progressbar"
            layout="@layout/progress_bar"/>

</FrameLayout>