<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:id="@+id/cl_container"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".EditProfileActivity">

    <include
            android:id="@+id/toolbar"
            layout="@layout/actionbar"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:id="@+id/linearLayout" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_save">

        <LinearLayout
                android:id="@+id/ll_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/iv_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/placeholder"/>

            <TextView
                    android:layout_marginTop="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_photo"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:hint="@string/name"
                    android:textSize="18sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:maxLines="1"
                    android:inputType="text"
                    android:textSize="18sp"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="Simpan"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <include
            android:visibility="gone"
            android:id="@+id/progressbar_edit"
            layout="@layout/progress_bar"/>

</androidx.constraintlayout.widget.ConstraintLayout>